--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.pluralsight.candycoded">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.resource://com.codeschool.candycoded/"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
